# docs/swagger.json
@@ -24,8 +24,8 @@
                 "summary": "User login endpoint",
                 "parameters": [
                     {
-                        "description": "Username",
-                        "name": "username",
+                        "description": "Email",
+                        "name": "email",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -47,6 +47,64 @@
                         "description": "Returns JWT token",
                         "schema": {
                             "$ref": "#/definitions/login.LoginResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/register": {
+            "post": {
+                "description": "Register a new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "User Registration",
+                "parameters": [
+                    {
+                        "description": "Name",
+                        "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Email",
+                        "name": "email",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Password",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User registration success",
+                        "schema": {
+                            "$ref": "#/definitions/register.UserResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "User registration failure",
+                        "schema": {
+                            "$ref": "#/definitions/register.ErrorResponse"
                         }
                     }
                 }
@@ -103,6 +161,24 @@
                 "verify": {
                     "type": "boolean",
                     "example": true
+                }
+            }
+        },
+        "register.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Failed to register user"
+                }
+            }
+        },
+        "register.UserResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "User registered successfully"
                 }
             }
         }
