# middleware/user/endpoint.go
@@ -3,6 +3,7 @@ package user
 import (
 	"github.com/gin-gonic/gin"
 	"feedo_back/middleware/user/login"
+	"feedo_back/middleware/user/register"
 )
 
 
@@ -18,5 +19,6 @@ func User(r *gin.Engine) {
 		userGroup.GET("/", RootUser)
 		userGroup.POST("/login", login.LoginHandler)
 		userGroup.POST("/verify", login.VerifyHandler)
+		userGroup.POST("/register", register.RegisterHandler)
 	}
 }
